# MEM-Linear

./: CITATION.cff  CMakeLists.txt  LICENSE  README.md
Carbon Nanotube/: datos.txt
H2O2/: datos.txt
src/: saoas.cpp
